--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Elsa Dewani Simanjuntak</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Portofolio</h1>
@@ -10,7 +11,7 @@
         <p>Saya <b>Elsa Dewani Simanjuntak</b> mahasiswa <i>Teknik Informatika</i> di <u>Institut Teknologi Sumatera.</u></p>
         <h2>Biodata</h2>
         <table border="1">
-            <tr>
+            <tr>  
                 <td>Nama</td>
                 <td>Elsa Dewani Simanjuntak</td>
             </tr>
