--- a/index.html
+++ b/index.html
@@ -3,51 +3,45 @@
     <head>
         <title>Elsa Dewani Simanjuntak</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <h1>Portofolio</h1>
-        <img src="img/Elsa.jpg" />
-        <h2>About Me</h2>
-        <p>Saya <b>Elsa Dewani Simanjuntak</b> mahasiswa <i>Teknik Informatika</i> di <u>Institut Teknologi Sumatera.</u></p>
+        <h1 class="judul">😀PORTOFOLIO😀</h1>
+        <img class="gambar" src="img/Elsa.jpg" />
+        <p class="deskripsi">Saya <b>Elsa Dewani Simanjuntak</b> mahasiswa <i>Teknik Informatika</i> di <u>Institut Teknologi Sumatera</u></p>
         <h2>Biodata</h2>
-        <table border="1">
-            <tr>  
-                <td>Nama</td>
-                <td>Elsa Dewani Simanjuntak</td>
-            </tr>
-            <tr>
-                <td>NIM</td>
-                <td>122140224</td>
-            </tr>
-            <tr>
-                <td>Jenis Kelamin</td>
-                <td>Perempuan</td>
-            </tr>
-            <tr>
-                <td>Umur</td>
-                <td>19 Tahun</td>
-            </tr>
-        </table>
-        <h2>Pengalaman</h2>
-        <ul>
-            <li>Staff Konsumsi Divisi Operasional (First Gathering IF 2023)</li>
-            <li>Staff Manajemen Acara (Paskah PMK 2023)</li>
-            <li>Staff Manajemen Acara (Natal PMK 2022)</li>
-        </ul>
+        <div class="panel">
+            <table class="tabel-biodata" border="1">
+                <tr>
+                    <td>🖐Nama</td>
+                    <td>Elsa Dewani Simanjuntak</td>
+                </tr>
+                <tr>
+                    <td>✒️ NIM</td>
+                    <td>122140224</td>
+                </tr>
+                <tr>
+                    <td>🙍‍♂️ Jenis Kelamin</td>
+                    <td>Perempuan</td>
+                </tr>
+                <tr>
+                    <td>📅 Umur</td>
+                    <td>19 Tahun</td>
+                </tr>
+            </table>
+        </div>
         <h2>Pendidikan</h2>
-        <ol>
-            <li>Institut Teknologi Sumatera</li>
-            <li>SMA Negeri 3 Kandis</li>
-            <li>SMP Negeri 2 Bukit Batu</li>
-        </ol>
+        <div class="panel">
+            <ol>
+                <li>Institut Teknologi Sumatera</li>
+                <li>SMA Negeri 3 Kandis</li>
+                <li>SMP Negeri 2 Bukit Batu</li>
+            </ol>
+        </div>
         <h2>Kontak</h2>
-        <ul>
-            <li>
-                <a href="https://wa.me/+6282287324165">Whatsapp</a>
-            </li>
-            <li>
-                <a href="https://instagram.com/elsasimanjuntak24">Instagram</a>
-            </li>
-        </ul>
+        <div class="panel">
+            <a href="https://wa.me/+6282287324165">📱 Whatsapp</a>
+            <a href="https://instagram.com/elsasimanjuntak24">📷 Instagram</a>
+        </div>
     </body>
 </html>
